major layout refactor!

--- a/_includes/resume/hobbies.html
+++ b/_includes/resume/hobbies.html
@@ -1,15 +1,23 @@
 <div class="no-page-break">
-    <details id="hobbies"> <a name="interests"></a> <a name="hobbiesandinterests"></a>
+    <details id="hobbies"> 
+        <a name="interests"></a> <a name="hobbiesandinterests"></a>
         <summary class="sectionheader">Hobbies and Interests</summary>
         <ul class="hobbies-list">
             <li>Private Pilot</li>
+            <li class="dark-color">◆</li>
             <li>Football</li>
+            <li class="dark-color">◆</li>
             <li>Skiing</li>
+            <li class="dark-color">◆</li>
             <li>Coaching</li>
+            <li class="dark-color">◆</li>
             <li>Poker</li>
+            <li class="dark-color">◆</li>
             <li>Musician</li>
+            <li class="dark-color">◆</li>
             <li>Strength Training</li>
-            <li>Woodworking, Handyman</li>
+            <li class="dark-color">◆</li>
+            <li>Woodworking</li>
         </ul>
     </details>
 </div>
