--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,143 +1,105 @@
 <details open>
     <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
-    <div class="skills-list">
-        <div class="skill-item"><strong>Security:</strong>
-            <span>
-                <span class="nowrap">Active Top Secret security clearance<span
-                        class="competency-indicator very-proficient"></span></span>, 
-                <span class="nowrap">Digital Rights Management (DRM/ADRMS)<span
-                        class="competency-indicator very-proficient"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Cloud Platforms:</strong>
-            <span>
-                <span class="nowrap">AWS<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Azure<span class="competency-indicator basic-understanding"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Backend Development:</strong>
-            <span>
-                <span class="nowrap">Java<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Spring Boot<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Classic ASP<span class="competency-indicator very-proficient"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Frontend Development:</strong>
-            <span>
-                <span class="nowrap">HTML<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">CSS<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">JavaScript<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">TypeScript<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Angular<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">React<span class="competency-indicator basic-understanding"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Device Drivers, Windows Services, APIs:</strong>
-            <span>
-                <span class="nowrap">C/C++<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Rust<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">GoLang<span class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Windows Desktop Applications:</strong>
-            <span>
-                <span class="nowrap">C# .NET<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Visual Basic 6.0<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Visual FoxPro<span class="competency-indicator very-proficient"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Scripting:</strong>
-            <span>
-                <span class="nowrap">Python<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">PowerShell<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">bash<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Ruby<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">Regular Expressions (RegEx)<span
-                        class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>Databases:</strong>
-            <span>
-                SQL (<span class="nowrap">SQL Server<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">MySQL<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">PostgreSQL<span class="competency-indicator basic-understanding"></span></span>),
-                NoSQL (<span class="nowrap">MongoDB<span
-                        class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">DynamoDB<span class="competency-indicator basic-understanding"></span></span>)
-            </span>
-        </div>
-        <!-- <div class="skill-item"><strong>Message Queues and Streaming:</strong>
-            <span>
-                <span class="nowrap">RabbitMQ<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">ZeroMQ<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">Amazon SQS<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">Amazon SNS<span class="competency-indicator basic-understanding"></span></span>
-            </span>
-        </div> -->
-        <!-- <div class="skill-item"><strong>Version Control:</strong>
-            <span>
-                <span class="nowrap">Git<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">SVN<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">GitHub<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">GitLab<span class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div> -->
-        <!-- <div class="skill-item"><strong>Frameworks and SDKs:</strong>
-            <span>
-                <span class="nowrap">.NET Framework<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Spring Boot<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">OpenXML SDK<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">Visual Studio Tools for Office (VSTO)<span
-                        class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div> -->
-        <div class="skill-item"><strong>Containerization:</strong>
-            <span>
-                <span class="nowrap">Docker<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Kubernetes<span class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>CI/CD and DevOps:</strong>
-            <span>
-                <span class="nowrap">CruiseControl<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">NANT<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Jenkins<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Jira<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">AWS CI/CD Tools<span
-                        class="competency-indicator basic-understanding"></span></span>
-            </span>
-        </div>
-        <div class="skill-item"><strong>System Architecture:</strong>
-            <span>
-                <span class="nowrap">System Design<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Distributed Systems<span
-                        class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Microservices<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">RESTful APIs<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Cloud Architecture<span class="competency-indicator very-proficient"></span>,
-                    <span class="nowrap">PlantUML<span class="competency-indicator very-proficient"></span></span>
-                </span>
-        </div>
-        <!-- <div class="skill-item"><strong>Operating Systems:</strong>
-            <span>
-                <span class="nowrap">Windows<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">macOS<span class="competency-indicator very-proficient"></span></span>,
-                <span class="nowrap">Linux<span class="competency-indicator very-proficient"></span></span>
-            </span>
-        </div> -->
-        <!-- <div class="skill-item"><strong>Methodologies:</strong>
-            <span>
-                <span class="nowrap">Agile<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Scrum<span class="competency-indicator good-knowledge"></span></span>
-            </span>
-        </div> -->
-        <!-- <div class="skill-item"><strong>Instrumentation:</strong>
-            <span>
-                <span class="nowrap">Bounds Checker<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Lint<span class="competency-indicator good-knowledge"></span></span>,
-                <span class="nowrap">Purify<span class="competency-indicator basic-understanding"></span></span>,
-                <span class="nowrap">Redgate ANTs<span class="competency-indicator basic-understanding"></span></span>
-            </span>
-        </div> -->
-    </div>
+    <ul class="skills competency-level">
+        <li class="skill">
+            <strong class="skill-type large proficient">Security:</strong>
+            <ul class="skill-items">
+                <li class="diamond">Active Top Secret Security Clearance</li>
+                <li>Digital Rights Management (DRM/ADRMS)</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large proficient">Cloud Platforms:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">AWS</li>
+                <li>Azure</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large proficient">Backend Development:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">SQL</li>
+                <li class="diamond">Java</li>
+                <li class="diamond">Spring Boot</li>
+                <li>Classic ASP</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large intermediate">Frontend Development:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">HTML</li>
+                <li class="diamond">CSS</li>
+                <li class="diamond">JavaScript</li>
+                <li class="diamond">TypeScript</li>
+                <li class="diamond">Angular</li>
+                <li>React</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large proficient">Device Drivers, Windows Services, APIs:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">C/C++</li>
+                <li class="diamond">Rust</li>
+                <li>GoLang</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large proficient">Windows Desktop Applications:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">C# .NET</li>
+                <li class="diamond">Visual Basic 6.0</li>
+                <li>Visual FoxPro</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large expert">Scripting:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">Python</li>
+                <li class="diamond">PowerShell</li>
+                <li class="diamond">bash</li>
+                <li class="diamond">Ruby</li>
+                <li>Regular Expressions (RegEx)</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large proficient">Databases:</strong>
+            <ul class="skill-items competency-level">
+                <span class="diamond">RDBMS
+                (<li class="diamond">SQL Server</li>
+                <li class="diamond">MySQL</li>
+                <li>PostgreSQL</li>) </span>
+                NoSQL
+                (<li class="diamond">MongoDB</li>
+                <li>DynamoDB</li>)
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large expert">Containerization:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">Docker</li>
+                <li>Kubernetes</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large intermediate">CI/CD and DevOps:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">CruiseControl</li>
+                <li class="diamond">NANT</li>
+                <li class="diamond">Jenkins</li>
+                <li class="diamond">Jira</li>
+                <li>AWS CI/CD Tools</li>
+            </ul>
+        </li>
+        <li class="skill">
+            <strong class="skill-type large proficient">System Architecture:</strong>
+            <ul class="skill-items competency-level">
+                <li class="diamond">System Design</li>
+                <li class="diamond">Distributed Systems</li>
+                <li class="diamond">Microservices</li>
+                <li class="diamond">RESTful APIs</li>
+                <li class="diamond">Cloud</li>
+                <li>PlantUML</li>
+            </ul>
+        </li>
+    </ul>
 </details>
