--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -2,32 +2,34 @@
     <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot"
         class="headshot {% if site.localhost %}local-headshot{% else %}remote-headshot{% endif %}">
     <div class="links">
-        <a href="https://www.linkedin.com/in/demaytom/" target="_blank">LinkedIn <i
-                class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://github.com/tomdemay" target="_blank">GitHub <i
-                class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://stackoverflow.com/users/1932930/tdemay" target="_blank">Stack Overflow <i
-                class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://www.linkedin.com/in/demaytom/details/recommendations/" target="_blank">Recommendations <i
-                class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://soundcloud.com/tom-demay/sets/featured-tracks" target="_blank">SoundCloud <i
-                class="fas fa-external-link-alt fa-xs"></i></a>
-        <br><br>
-        <h3>Top Skills:</h3>
-        <ul>
-            <li><a href="#professionalskills">Active Top Secret<br>security clearance</a></li>
-            <li><a href="#professionalskills">C/C++ <span class="competency-indicator light-color very-proficient"></span></a></li>
-            <li><a href="#professionalskills">GoLang, Rust <span class="competency-indicator light-color good-knowledge"></span></a></li>
-            <li><a href="#professionalskills">Docker <span class="competency-indicator light-color very-proficient"></span></a></li>
-            <li><a href="#professionalskills">C# <span class="competency-indicator light-color very-proficient"></span></a></li>
-            <li><a href="#professionalskills">Python <span class="competency-indicator light-color very-proficient"></span></a></li>
-            <li><a href="#professionalskills">Java <span class="competency-indicator light-color good-knowledge"></a></li>
-            <li><a href="#professionalskills">AWS <span class="competency-indicator light-color good-knowledge"></a></li>
-            <li><a href="#professionalskills">PowerShell <span class="competency-indicator light-color very-proficient"></span></a></li>
-            <li><a href="#professionalskills">Ruby <span class="competency-indicator light-color good-knowledge"></a></li>
-            <li><a href="#professionalskills">TypeScript <span class="competency-indicator light-color good-knowledge"></a></li>
-            <li><a href="#professionalskills">HTML <span class="competency-indicator light-color very-proficient"></span></a></li>
-            <li><a href="#professionalskills">SQL <span class="competency-indicator light-color very-proficient"></span></a></li>
+        <ul class="competency-level">
+            <a href="#professionalskills"><li class="expert">C/C++</li></a>
+            <a href="#professionalskills"><li class="intermediate">Rust</li></a>
+            <a href="#professionalskills"><li class="intermediate">GoLang</li></a>
+            <a href="#professionalskills"><li class=" proficient">Docker</li></a>
+            <a href="#professionalskills"><li class="intermediate">Kubernetes</li></a>
+            <a href="#professionalskills"><li class="expert">C#</li></a>
+            <a href="#professionalskills"><li class="expert">Python</li></a>
+            <a href="#professionalskills"><li class="advanced">Java</li></a>
+            <a href="#professionalskills"><li class="intermediate">AWS</li></a>
+            <a href="#professionalskills"><li class="advanced">PowerShell</li></a>
+            <a href="#professionalskills"><li class="advanced">SQL</li></a>
         </ul>
+        <br>
+        <a href="https://www.linkedin.com/in/demaytom/" target="_blank">
+            LinkedIn <i class="fas fa-external-link-alt fa-xs"></i>
+        </a><br>
+        <a href="https://github.com/tomdemay" target="_blank">
+            GitHub <i class="fas fa-external-link-alt fa-xs"></i>
+        </a><br>
+        <a href="https://stackoverflow.com/users/1932930/tdemay" target="_blank">
+            Stack Overflow <i class="fas fa-external-link-alt fa-xs"></i>
+        </a><br>
+        <a href="https://www.linkedin.com/in/demaytom/details/recommendations/" target="_blank">
+            Recommendations <i class="fas fa-external-link-alt fa-xs"></i>
+        </a><br>
+        <a href="https://soundcloud.com/tom-demay/sets/featured-tracks" target="_blank">
+            SoundCloud <i class="fas fa-external-link-alt fa-xs"></i>
+        </a>
     </div>
 </div>
