--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -11,9 +11,9 @@
                     </a><br>
                     University of Texas at Austin<br>
                     Texas McCombs School of Business<br>
-                    Post Graduate course to prepare students to get their <strong>AWS</strong> and
-                    <strong>Azure certifications</strong> and expose them to other cloud providers
-                    such as <strong>Google and IBM</strong>.<br>
+                    Post Graduate course to prepare students to get their AWS and
+                    Azure certifications and expose them to other cloud providers
+                    such as Google and IBM.<br>
                     4.26 GPA
                 </span>
                 <span class="right">March 2023 - October 2023</span>
