--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -4,6 +4,18 @@
     --light-color: rgb(121, 212, 241);
 }
 
+.dark-color {
+    color: var(--dark-color);
+}
+
+.medium-color {
+    color: var(--medium-color);
+}
+
+.light-color {
+    color: var(--light-color);
+}
+
 .left-pane>.links {
     display: none;
 }
@@ -12,10 +24,6 @@ h1,
 h2,
 h3 {
     margin: 0px;
-}
-
-li {
-    padding: 3px;
 }
 
 .page-break {
@@ -78,79 +86,124 @@ summary span.right {
     color: white;
 }
 
+.two-column-list {
+    list-style-type: none;
+}
+
+.two-column-list li {
+    justify-content: space-between;
+}
+
+.two-column-list li .left {
+    text-align: left;
+}
+
+.two-column-list li .right {
+    text-align: right;
+}
+
 .nowrap {
     white-space: nowrap;
 }
 
-.skills-list {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    /* Adds space between each skill item */
-    position: relative;
-    /* Needed for the bullet styling */
-    list-style: none;
-    /* Remove default bullets */
+.skills {
+    list-style-type: none;
+    padding-inline-start: 20px;
 }
 
-.skill-item {
+.skill {
     display: flex;
-    align-items: baseline;
-    /* Center aligns items vertically */
-    position: relative;
-    // padding-left: 0.5em;
-    /* Add padding to ensure alignment with bullets */
+    /* Use flexbox to align items horizontally */
+    align-items: flex-start;
+    /* Align items at the start vertically */
+    padding: 4px 0;
+    line-height: 1.2;
 }
 
-.skill-item strong {
-    flex-basis: 33%;
-    /* Left column takes up 1/3 of the available space */
+.skill-type {
+    flex-basis: 25%;
+    /* Ensure the skill type takes up 33% of the space */
     flex-shrink: 0;
-    /* Prevents shrinking */
-    margin-right: 10px;
-    /* Adds space between the category and the skills */
-    word-wrap: break-word;
-    /* Allows word wrapping within the left column */
-    max-width: 315px;
+    /* Prevent shrinking */
+    max-width: 400px;
 }
 
-.skill-item span {
-    flex-basis: 67%;
-    /* Right column takes up 2/3 of the available space */
+.skill-items {
+    list-style-type: none;
+    padding: 0 0 0 10px;
+    margin: 0;
+    flex-basis: 75%;
+    /* Skill items take up the remaining space */
     flex-grow: 1;
-    /* Ensures the text in the second column uses remaining space */
+    /* Allow skill items to grow */
 }
 
-.competency-indicator {
-    font-size: 1rem;
-    /* Adjust size as needed */
-    line-height: 1;
-    /* Ensure vertical alignment */
+.skill-items li {
+    display: inline-block;
+}
+
+.skills.competency-level *::after {
     color: var(--dark-color);
-    /* Fill color for stars */
+    display: inline-block;
+}
+
+.hobbies-list {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 0px ;
+    margin: 0;
+}
+
+.hobbies-list>li {
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0;
+}
+
+.diamond::after {
+    color: var(--dark-color);
+    content: "◆";
+}
+
+.competency-level strong::after,
+.competency-level li::after {
     padding-left: 0.25em;
+    font-weight: normal;
 }
 
-.dark-color {
-    color: var(--dark-color);
-}
-
-.medium-color {
-    color: var(--medium-color);
-}
-
-.light-color {
-    color: var(--light-color);
-}
-
-.basic-understanding::before {
+.competency-level .novice::after,
+.competency-level .beginner::after {
     content: "★☆☆";
 }
 
-.good-knowledge::before {
+.competency-level .intermediate::after,
+.competency-level .advanced::after {
     content: "★★☆";
 }
 
-.very-proficient::before {
+.competency-level .proficient::after,
+.competency-level .expert::after {
     content: "★★★";
+}
+
+.competency-level .large.novice::after {
+    content: "★☆☆☆☆";
+}
+
+.competency-level .large.beginner::after {
+    content: "★★☆☆☆";
+}
+
+.competency-level .large.intermediate::after {
+    content: "★★★☆☆";
+}
+
+.competency-level .large.advanced::after,
+.competency-level .large.proficient::after {
+    content: "★★★★☆";
+}
+
+.competency-level .large.expert::after {
+    content: "★★★★★";
 }
