adjusting links for screen, print, and visited

--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -26,6 +26,14 @@ h3 {
     margin: 0px;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: inherit;
+}
+
 .page-break {
     border: none;
     height: 0;
